confirmed issue with types used within types that have a struct:pkg:path Meta() tag
