# gen/http/cli/test_server/cli.go
@@ -1,0 +1,165 @@
+// Code generated by goa v3.10.2, DO NOT EDIT.
+//
+// TestServer HTTP client CLI support package
+//
+// Command:
+// $ goa gen example.com/goa_issue/design
+
+package cli
+
+import (
+	"flag"
+	"fmt"
+	"net/http"
+	"os"
+
+	testservicec "example.com/goa_issue/gen/http/test_service/client"
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// UsageCommands returns the set of commands and sub-commands using the format
+//
+//	command (subcommand1|subcommand2|...)
+func UsageCommands() string {
+	return `test-service create
+`
+}
+
+// UsageExamples produces an example of a valid invocation of the CLI tool.
+func UsageExamples() string {
+	return os.Args[0] + ` test-service create --body '{
+      "description": "Similique rerum tempora quos totam quisquam voluptatibus.",
+      "id": "Tempora aut.",
+      "name": "Repudiandae perspiciatis est sint.",
+      "thing": {
+         "Description": "Cumque laudantium aliquid ea."
+      }
+   }'` + "\n" +
+		""
+}
+
+// ParseEndpoint returns the endpoint and payload as specified on the command
+// line.
+func ParseEndpoint(
+	scheme, host string,
+	doer goahttp.Doer,
+	enc func(*http.Request) goahttp.Encoder,
+	dec func(*http.Response) goahttp.Decoder,
+	restore bool,
+) (goa.Endpoint, interface{}, error) {
+	var (
+		testServiceFlags = flag.NewFlagSet("test-service", flag.ContinueOnError)
+
+		testServiceCreateFlags    = flag.NewFlagSet("create", flag.ExitOnError)
+		testServiceCreateBodyFlag = testServiceCreateFlags.String("body", "REQUIRED", "")
+	)
+	testServiceFlags.Usage = testServiceUsage
+	testServiceCreateFlags.Usage = testServiceCreateUsage
+
+	if err := flag.CommandLine.Parse(os.Args[1:]); err != nil {
+		return nil, nil, err
+	}
+
+	if flag.NArg() < 2 { // two non flag args are required: SERVICE and ENDPOINT (aka COMMAND)
+		return nil, nil, fmt.Errorf("not enough arguments")
+	}
+
+	var (
+		svcn string
+		svcf *flag.FlagSet
+	)
+	{
+		svcn = flag.Arg(0)
+		switch svcn {
+		case "test-service":
+			svcf = testServiceFlags
+		default:
+			return nil, nil, fmt.Errorf("unknown service %q", svcn)
+		}
+	}
+	if err := svcf.Parse(flag.Args()[1:]); err != nil {
+		return nil, nil, err
+	}
+
+	var (
+		epn string
+		epf *flag.FlagSet
+	)
+	{
+		epn = svcf.Arg(0)
+		switch svcn {
+		case "test-service":
+			switch epn {
+			case "create":
+				epf = testServiceCreateFlags
+
+			}
+
+		}
+	}
+	if epf == nil {
+		return nil, nil, fmt.Errorf("unknown %q endpoint %q", svcn, epn)
+	}
+
+	// Parse endpoint flags if any
+	if svcf.NArg() > 1 {
+		if err := epf.Parse(svcf.Args()[1:]); err != nil {
+			return nil, nil, err
+		}
+	}
+
+	var (
+		data     interface{}
+		endpoint goa.Endpoint
+		err      error
+	)
+	{
+		switch svcn {
+		case "test-service":
+			c := testservicec.NewClient(scheme, host, doer, enc, dec, restore)
+			switch epn {
+			case "create":
+				endpoint = c.Create()
+				data, err = testservicec.BuildCreatePayload(*testServiceCreateBodyFlag)
+			}
+		}
+	}
+	if err != nil {
+		return nil, nil, err
+	}
+
+	return endpoint, data, nil
+}
+
+// test-serviceUsage displays the usage of the test-service command and its
+// subcommands.
+func testServiceUsage() {
+	fmt.Fprintf(os.Stderr, `The calc service performs operations on numbers.
+Usage:
+    %[1]s [globalflags] test-service COMMAND [flags]
+
+COMMAND:
+    create: Create a new thing
+
+Additional help:
+    %[1]s test-service COMMAND --help
+`, os.Args[0])
+}
+func testServiceCreateUsage() {
+	fmt.Fprintf(os.Stderr, `%[1]s [flags] test-service create -body JSON
+
+Create a new thing
+    -body JSON: 
+
+Example:
+    %[1]s test-service create --body '{
+      "description": "Similique rerum tempora quos totam quisquam voluptatibus.",
+      "id": "Tempora aut.",
+      "name": "Repudiandae perspiciatis est sint.",
+      "thing": {
+         "Description": "Cumque laudantium aliquid ea."
+      }
+   }'
+`, os.Args[0])
+}
