# gen/http/openapi3.yaml
@@ -1,107 +1,63 @@
 openapi: 3.0.3
 info:
-    title: Calculator Service
-    description: Service for multiplying numbers, a Goa teaser
+    title: My Test API
+    description: API for testing goa stuff
     version: "1.0"
 servers:
     - url: http://localhost:80
 paths:
-    /{id}:
-        patch:
+    /:
+        post:
             tags:
                 - TestService
-            summary: update TestService
-            description: Update an existing workspace information
-            operationId: TestService#update
-            parameters:
-                - name: id
-                  in: path
-                  description: Workspace ID
-                  required: true
-                  schema:
-                    type: string
-                    description: Workspace ID
-                    example: Excepturi blanditiis mollitia eos quas.
-                  example: Enim dolor.
+            summary: create TestService
+            description: Create a new thing
+            operationId: TestService#create
             requestBody:
                 required: true
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/UpdateRequestBody'
+                            $ref: '#/components/schemas/CreateRequestBody'
                         example:
-                            description: Quibusdam eius.
-                            destination_ids:
-                                - Eaque consectetur excepturi eaque.
-                                - Veritatis id iure.
-                            logo_url: Accusantium culpa odit eaque.
-                            name: Quasi est eum ad.
-            responses:
-                "204":
-                    description: No Content response.
-        put:
-            tags:
-                - TestService
-            summary: set TestService
-            description: Set the workspace to be used
-            operationId: TestService#set
-            parameters:
-                - name: id
-                  in: path
-                  description: Workspace ID
-                  required: true
-                  schema:
-                    type: string
-                    description: Workspace ID
-                    example: Ut corporis nihil.
-                  example: Eveniet et ipsa nihil.
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/UpdateRequestBody'
-                        example:
-                            description: Mollitia et quis consectetur.
-                            destination_ids:
-                                - Neque consequatur maiores aut.
-                                - Et consequatur quis dolorum corporis officiis rerum.
-                                - Quia dolores consequatur cum itaque.
-                                - Nam deserunt et tempora atque.
-                            logo_url: Ea ut enim aut.
-                            name: Omnis velit laboriosam unde omnis incidunt.
+                            description: Similique rerum tempora quos totam quisquam voluptatibus.
+                            id: Tempora aut.
+                            name: Repudiandae perspiciatis est sint.
+                            thing:
+                                Description: Cumque laudantium aliquid ea.
             responses:
                 "204":
                     description: No Content response.
 components:
     schemas:
-        UpdateRequestBody:
+        CreateRequestBody:
             type: object
             properties:
                 description:
                     type: string
-                    example: Est repellendus asperiores non veritatis tenetur qui.
-                destination_ids:
-                    type: array
-                    items:
-                        type: string
-                        example: Officiis non culpa dolores.
-                    example:
-                        - Nemo eligendi officiis.
-                        - Nulla vitae culpa ullam autem.
-                logo_url:
+                    example: Dolorem velit explicabo.
+                id:
                     type: string
-                    example: Est harum dolor error.
+                    example: Corporis qui commodi aut.
                 name:
                     type: string
-                    example: Et repellat quis.
+                    example: Enim et laudantium ad at vel amet.
+                thing:
+                    $ref: '#/components/schemas/SecondType'
             example:
-                description: Corporis fuga fuga a.
-                destination_ids:
-                    - Aperiam accusamus.
-                    - Fugiat esse quisquam quod earum eum.
-                logo_url: Dolores repellat occaecati tempore assumenda repellendus.
-                name: Accusantium animi at quis quae.
+                description: Commodi sed ut dolorem.
+                id: Animi sapiente nobis commodi.
+                name: Eius magnam tempore reiciendis unde.
+                thing:
+                    Description: Cumque laudantium aliquid ea.
+        SecondType:
+            type: object
+            properties:
+                Description:
+                    type: string
+                    example: Reprehenderit dolorem adipisci ut.
+            example:
+                Description: Vel beatae ea consequatur hic accusantium.
 tags:
     - name: TestService
       description: The calc service performs operations on numbers.
