# gen/types/first_type.go
@@ -1,0 +1,16 @@
+// Code generated by goa v3.10.2, DO NOT EDIT.
+//
+// User types
+//
+// Command:
+// $ goa gen example.com/goa_issue/design
+
+package types
+
+// FirstType is the payload type of the TestService service create method.
+type FirstType struct {
+	ID          *string
+	Name        *string
+	Description *string
+	Thing       *SecondType
+}
